fix to spacing

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ main {
 }
 
 .container-text {
+	margin-top: 40px;
 	width: 440px;
 }
 
@@ -53,8 +54,8 @@ main {
 	background-color: #fff;
 	border-radius: 24px;
 	border-color: transparent;
-	padding: 12px 68px;
-	box-shadow: darkblue 0px 5px 20px -4px;
+	padding: 10px 78px;
+	box-shadow: darkblue 0px 10px 20px -10px;
 }
 
 .container-text button:hover {
@@ -68,12 +69,12 @@ main {
 }
 
 .heading {
-	font-size: 2rem;
+	font-weight: 600;
 	font-family: 'Open Sans', sans-serif;
 }
 
 .description {
-	margin: 24px 0;
+	padding: 10px 0;
 }
 
 .description,
@@ -88,9 +89,9 @@ main {
 }
 
 .social-container img {
-	background-color: #ffffff20;
+	background-color: #ffffff40;
 	padding: 5px;
-	width: 24px;
+	width: 22px;
 	overflow: hidden;
 	border: transparent 2px solid;
 	border-radius: 14px;
@@ -131,7 +132,7 @@ footer {
 	}
 
 	header {
-		margin-bottom: 10px;
+		margin: 30px 0;
 		background-size: 40%;
 	}
 
@@ -149,17 +150,14 @@ footer {
 	.description {
 		font-size: 16.5px;
 		font-weight: 300;
-		margin-bottom: 40px;
+		margin-bottom: 20px;
+		padding: 12px 0;
 	}
 
 	.mockup {
 		display: block;
 		overflow: hidden;
 		max-height: max-content;
-	}
-
-	.heading {
-		margin-bottom: 20px;
 	}
 
 	.social-container {
